# spellcast-solver

./: CHANGELOG.md  README.md  spellcast-solver.cabal
app/: Main.hs
