cabal-version:      2.4
name:               spellcast-solver
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Fabian Lippold
maintainer:         fabianlippold1184@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable spellcast-solver
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                    , array
                    , lens
                    , extra
                    , unordered-containers
                    , bytestring
                    , bytestring-trie
                    , async
                    , criterion-measurement
                    , formatting
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -O2 -optc-Ofast -Wall -Wextra -threaded -with-rtsopts=-N
